--- a/styles/symbols-list.less
+++ b/styles/symbols-list.less
@@ -99,8 +99,8 @@
 .symbols-list .list-item-fixme::before{ content: "!"; color: #FFF;}
 .symbols-list .list-item-hack{ background: #7c0000 }
 .symbols-list .list-item-hack::before{ content: "!"; color: #FFF;}
-.symbols-list .list-item-function{ background: #3996e3 }
-.symbols-list .list-item-function::before{ content: "F"; color: #FFF;}
+.symbols-list .list-item-jinie{ background: #3996e3 }
+.symbols-list .list-item-jinie::before{ content: "J"; color: #FFF;}
 .symbols-list .list-item-attr{ background: #3996e3 }
 .symbols-list .list-item-attr::before{ content: "A"; color: #FFF;}
 .symbols-list .list-item-filter{ background: #839595 }
