Scenario DB 에서 동작하도록 Regex 추가 Scenario DB 에서 동작하도록 Regex 추가

--- a/styles/symbols-list.less
+++ b/styles/symbols-list.less
@@ -101,6 +101,8 @@
 .symbols-list .list-item-hack::before{ content: "!"; color: #FFF;}
 .symbols-list .list-item-jinie{ background: #3996e3 }
 .symbols-list .list-item-jinie::before{ content: "J"; color: #FFF;}
+.symbols-list .list-item-scenario{ background: #3996e3 }
+.symbols-list .list-item-scenario::before{ content: "S"; color: #FFF;}
 .symbols-list .list-item-attr{ background: #3996e3 }
 .symbols-list .list-item-attr::before{ content: "A"; color: #FFF;}
 .symbols-list .list-item-filter{ background: #839595 }
